tests/pos/i20554-b/SimpleAnnotation.java

public @interface SimpleAnnotation {

    int a() default 0;

    int value() default 1;

    int b() default 0;
}
