tests/neg/i20554-b/SimpleAnnotation.java

public @interface SimpleAnnotation {
    int a() default 1;
}
